--- a/level-1/.tekton/hello-listener.yaml
+++ b/level-1/.tekton/hello-listener.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1alpha1
 kind: EventListener
 metadata:
-  name: listener
+  name: hello-listener
 spec:
   triggers:
     - binding:
