remove binding ref

--- a/level-1/.tekton/hello-listener.yaml
+++ b/level-1/.tekton/hello-listener.yaml
@@ -4,7 +4,5 @@ metadata:
   name: hello-listener
 spec:
   triggers:
-    - binding:
-        name: hello-trigger-binding
-      template:
+    - template:
         name: hello-trigger-template
