add binding required

--- a/level-1/.tekton/hello-listener.yaml
+++ b/level-1/.tekton/hello-listener.yaml
@@ -4,5 +4,7 @@ metadata:
   name: hello-listener
 spec:
   triggers:
-    - template:
+    - binding:
+        name: hello-trigger-binding
+      template:
         name: hello-trigger-template
