--- a/level-2/.tekton/hello-trigger-binding.yaml
+++ b/level-2/.tekton/hello-trigger-binding.yaml
@@ -7,4 +7,4 @@ spec:
     - name: repository
       value: $(body.repository.url)
     - name: branch
-      value: $(body.repository.branch)
+      value: $(body.repository.url)
