add template params

--- a/level-2/.tekton/hello-trigger-template.yaml
+++ b/level-2/.tekton/hello-trigger-template.yaml
@@ -3,6 +3,11 @@ kind: TriggerTemplate
 metadata:
   name: hello-trigger-template
 spec:
+  params:
+    - name: repository
+      description: The git repo
+    - name: branch
+      description: the branch for the git repo
   resourcetemplates:
     - apiVersion: tekton.dev/v1alpha1
       kind: PipelineRun
@@ -11,4 +16,10 @@ spec:
       spec:
         pipelineRef:
           name: hello-pipeline
+        params:
+          - name: repository
+            value: $(params.repository)
+          - name: branch
+            value: $(params.branch)
+
 
