--- a/level-2/.tekton/hello-trigger-binding.yaml
+++ b/level-2/.tekton/hello-trigger-binding.yaml
@@ -5,6 +5,6 @@ metadata:
 spec:
   params:
     - name: repository
-      value: $(repository.html_url)
+      value: $(body.repository.html_url)
     - name: branch
-      value: $(ref)
+      value: $(body.ref)
