update ref path

--- a/level-2/.tekton/hello-trigger-binding.yaml
+++ b/level-2/.tekton/hello-trigger-binding.yaml
@@ -7,4 +7,4 @@ spec:
     - name: repository
       value: $(event.repository.html_url)
     - name: branch
-      value: $(event.ref)
+      value: $(event.head.ref)
