remove inverted commas

--- a/level-2/.tekton/hello-pipeline.yaml
+++ b/level-2/.tekton/hello-pipeline.yaml
@@ -14,6 +14,6 @@ spec:
         name: hello-task
       params:
         - name: repository
-          value: "$(params.repository)"
+          value: $(params.repository)
         - name: branch
-          value: "$(params.branch)"
+          value: $(params.branch)
