--- a/level-2/.tekton/hello-trigger-binding.yaml
+++ b/level-2/.tekton/hello-trigger-binding.yaml
@@ -5,10 +5,6 @@ metadata:
 spec:
   params:
     - name: repository
-      value: "https://github.com/danielbu-ibm/Tekton-Tutorial"
+      value: $(event.repository.html_url)
     - name: branch
-      value: "master"
-#    - name: repository
-#      value: $(event.repository.html_url)
-#    - name: branch
-#      value: $(event.pull_request.head.ref)
+      value: $(event.pull_request.head.ref)
