--- a/level-3/.tekton/hello-task.yaml
+++ b/level-3/.tekton/hello-task.yaml
@@ -19,7 +19,7 @@ spec:
     - name: echo
       image: ubuntu
       command: ["/bin/bash", "-c"]
-      args: |
+      args: -|
         export STATUS_URL = $(echo $(inputs.params.statuses_url) | sed -e "s/{sha}/${$(inputs.params.commit_sha)}/g")
         env
 
