--- a/level-3/.tekton/hello-task.yaml
+++ b/level-3/.tekton/hello-task.yaml
@@ -18,7 +18,8 @@ spec:
   steps:
     - name: echo
       image: ubuntu
-      command:
+      command: ["/bin/bash", "-c"]
+      args:
         -|
           echo "Hi!"
 #          export STATUS_URL = $(echo $(inputs.params.statuses_url) | sed -e "s/{sha}/${$(inputs.params.commit_sha)}/g")
