--- a/level-3/.tekton/hello-task.yaml
+++ b/level-3/.tekton/hello-task.yaml
@@ -18,9 +18,9 @@ spec:
   steps:
     - name: echo
       image: ubuntu
-      command: ["/bin/bash", "-c"]
+      command: ["/bin/sh","-c"]
       args:
-        -|
+        - |
           echo "Hi!"
 #          export STATUS_URL = $(echo $(inputs.params.statuses_url) | sed -e "s/{sha}/${$(inputs.params.commit_sha)}/g")
 #          env
