--- a/level-3/.tekton/hello-task.yaml
+++ b/level-3/.tekton/hello-task.yaml
@@ -16,11 +16,12 @@ spec:
         default: "Running Tekton Pipeline"
       - name: target_url
         default: "https://cloud.ibm.com/devops/pipelines/tekton/"
+      - name: github_user
+      - name: github_password
   steps:
     - name: echo
       image: ubuntu
       command: ["/bin/sh","-c"]
       args:
         - |
-          echo "$(params.GITHUB_USER)"
-#          curl -s -o /dev/null --max-time 60 -X POST -u $(params.GITHUB_USER):$(params.GITHUB_PASSWORD) -H "Content-Type: application/json" -d '{"state": "$(inputs.params.status_state)","target_url": "$(inputs.params.target_url)", "description": "$(inputs.params.status_description)","context": "$(inputs.params.status_name)"}' $(inputs.params.status_url)
+          curl -s -o /dev/null --max-time 60 -X POST -u $(params.github_user):$(params.github_password) -H "Content-Type: application/json" -d '{"state": "$(inputs.params.status_state)","target_url": "$(inputs.params.target_url)", "description": "$(inputs.params.status_description)","context": "$(inputs.params.status_name)"}' $(inputs.params.status_url)
