--- a/level-3/.tekton/hello-task.yaml
+++ b/level-3/.tekton/hello-task.yaml
@@ -20,7 +20,7 @@ spec:
       - name: github_password
   steps:
     - name: echo
-      image: curlimages/curl
+      image: ubuntu
       command: ["/bin/sh","-c"]
       args:
         - |
