--- a/level-3/.tekton/hello-pipeline.yaml
+++ b/level-3/.tekton/hello-pipeline.yaml
@@ -33,24 +33,24 @@ spec:
           value: "pending"
         - name: status_description
           value: "Hello Tekton Pipeline Running"
-
-    - name: pipeline-hello-task
-      taskRef:
-        name: hello-task-finished
-      params:
-        - name: repository
-          value: $(params.repository)
-        - name: branch
-          value: $(params.branch)
-        - name: statuses_url
-          value: $(params.statuses_url)
-        - name: github_user
-          value: $(params.github_user)
-        - name: github_password
-          value: $(params.github_password)
-        - name: status_name
-          value: "tekton_pr_status"
-        - name: status_state
-          value: "success"
-        - name: status_description
-          value: "Hello Tekton Pipeline Complete"
+#
+#    - name: pipeline-hello-task
+#      taskRef:
+#        name: hello-task-finished
+#      params:
+#        - name: repository
+#          value: $(params.repository)
+#        - name: branch
+#          value: $(params.branch)
+#        - name: statuses_url
+#          value: $(params.statuses_url)
+#        - name: github_user
+#          value: $(params.github_user)
+#        - name: github_password
+#          value: $(params.github_password)
+#        - name: status_name
+#          value: "tekton_pr_status"
+#        - name: status_state
+#          value: "success"
+#        - name: status_description
+#          value: "Hello Tekton Pipeline Complete"
