--- a/level-3/.tekton/hello-pipeline.yaml
+++ b/level-3/.tekton/hello-pipeline.yaml
@@ -37,7 +37,8 @@ spec:
     - name: pipeline-hello-task-finish
       taskRef:
         name: hello-task
-      runAfter: pipeline-hello-task-start
+      runAfter:
+        - pipeline-hello-task-start
       params:
         - name: repository
           value: $(params.repository)
