--- a/level-3/.tekton/hello-pipeline.yaml
+++ b/level-3/.tekton/hello-pipeline.yaml
@@ -36,9 +36,7 @@ spec:
 
     - name: pipeline-hello-task-finish
       taskRef:
-        name: hello-task
-      runAfter:
-        - pipeline-hello-task-start
+        name: hello-task-2
       params:
         - name: repository
           value: $(params.repository)
