--- a/level-3/.tekton/hello-pipeline.yaml
+++ b/level-3/.tekton/hello-pipeline.yaml
@@ -15,7 +15,7 @@ spec:
   tasks:
     - name: pipeline-hello-task
       taskRef:
-        name: hello-task-start
+        name: hello-task
       params:
         - name: repository
           value: $(params.repository)
@@ -36,7 +36,7 @@ spec:
 
     - name: pipeline-hello-task
       taskRef:
-        name: hello-task-finished
+        name: hello-task
       params:
         - name: repository
           value: $(params.repository)
