--- a/level-3/.tekton/hello-pipeline.yaml
+++ b/level-3/.tekton/hello-pipeline.yaml
@@ -13,7 +13,7 @@ spec:
     - name: github_user
     - name: github_password
   tasks:
-    - name: pipeline-hello
+    - name: pipeline-hello-task
       taskRef:
         name: hello-task
       params:
